	PR optimization/11018 	* config/sparc/sparc.c (sparc_v8plus_shift): Use which_alternative 	consistently to decide whether the scratch register is really 	required.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@67429 138bc75d-0d04-0410-961f-82ee72b054a4